# justchat

./: README.md
.github/workflows/: www.yml
server/: Cargo.toml  diesel.toml  docker-compose.yml  example.env
server/migrations/2023-07-08-083919_create_user_accounts/: down.sql  up.sql
server/src/: config.rs  db.rs  main.rs
server/src/user_account/: errors.rs  handlers.rs  mod.rs  models.rs  repository.rs  schema.rs
server/src/user_account/sql/: add_user_account.sql  schema.sql
www/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
www/.husky/: pre-commit
www/src/: app.css  types.ts
www/src/lib/chat/: api-client.ts  api.ts  index.ts  repository.ts  types.ts
www/src/lib/common/: types.ts
www/src/lib/common/components/: button.svelte  sidebar.svelte
www/src/lib/server/: chat.ts
www/src/lib/user/: api-client.ts  api.ts  repository.ts  store.ts  types.ts
www/src/routes/: +layout.svelte  +page.svelte
www/src/routes/api/conversations/: +server.ts
www/src/routes/api/conversations/[slug]/: +server.ts
www/src/routes/api/me/: +server.ts
www/src/routes/chat/: +layout.server.ts  +layout.svelte  +page.svelte  +server.ts  chat-sidebar.svelte  conversation-list.svelte  header.svelte  main.svelte  sidebar-toggler.svelte  sidebar.svelte  store.ts
www/src/routes/chat/[slug]/: +page.server.ts  +page.svelte  +server.ts  conversation-info-sidebar.svelte  message-input.svelte  messages-box.svelte
www/tests/: test.ts
