[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"]}
tokio-postgres = "0.7.8"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
thiserror = "1.0"
derive_more = "0.99.17"
config = "0.13.3"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres"] }
